--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "increment numbers in array. this can make multiple depth for-loop single.",
   "main": "index.js",
   "scripts": {
-    "make": "tsc"
+    "make": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/r22n/incnum/issues"
   },
-  "homepage": "https://github.com/r22n/incnum#readme"
+  "homepage": "https://github.com/r22n/incnum#readme",
+  "devDependencies": {
+    "jest": "^29.5.0"
+  }
 }
